newclay/test/Compiler/Resolver/Fail/MissingName1/main.clay
import __primitives__.*;

define Bar as ();
overload #Bar(x) = ();
